# void

./: Cargo.toml  README.md  build.sh  grammars.json
grammars/: rust.json
res/: config.toml
res/colorschemes/: default.void
res/themes/: default  default.void
scripts/: update_themes.py  update_themes.rs
src/: .config.rs.swp  app.rs  config.rs  main.rs  theme.rs  themes.rs  utils.rs
src/editor/: command_executor.rs  drawing.rs  fs.rs  gap_buffer.rs  mod.rs  style.rs  text_drawer.rs  utils.rs
