[package]
name = "void"
version = "0.1.0"
edition = "2021"

[profile.release]
# Enable link-time optimization
lto = true
# Reduce number of codegen units to increase optimizations
codegen-units = 1
# Strip symbols from binary
strip = true

[dependencies]
macroquad = { version = "0.3.25", default-features = false }
clipboard = "0.5.0"
toml = "0.5.11"
